# roguetrader-program

./: Anchor.toml  Cargo.toml
programs/roguetrader/: Cargo.toml
programs/roguetrader/src/: errors.rs  events.rs  lib.rs  pyth.rs
programs/roguetrader/src/instructions/: admin_reset_vault.rs  admin_set_referrer.rs  close_bet.rs  create_agent_vault.rs  create_group_config.rs  create_lp_metadata.rs  deposit_sol.rs  draw_raffle.rs  expire_stale_bet.rs  fund_vault.rs  initialize.rs  mod.rs  pause.rs  propose_bet.rs  set_referrer.rs  settle_bet.rs  transfer_authority.rs  update_config.rs  update_group_feeds.rs  update_lp_metadata.rs  withdraw_sol.rs
programs/roguetrader/src/state/: agent_vault.rs  bet.rs  clearing_house.rs  group_config.rs  mod.rs  player_state.rs  referral_state.rs
