[package]
name = "roguetrader"
version = "0.1.0"
description = "Decentralised on-chain P2P prediction market with 30 AI-powered RogueBots"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "roguetrader"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
solana-security-txt = "1.1.1"

# Pinned library deps — Solana 1.18.26 SBF toolchain compatibility
# NOTE: cc and jobserver are build deps pinned via Cargo.lock only (not here)
# because adding them as [dependencies] makes SBF try to compile them for target
blake3 = "=1.5.5"

# NOTE: pyth-solana-receiver-sdk v0.4 is incompatible with anchor-lang 0.30.1
# (it pulls anchor-lang 0.32.1 via pythnet-sdk). Instead, we define Pyth
# PriceUpdateV2 types locally and deserialize manually. See src/pyth.rs.
